# orator

./: .gitignore  Cargo.toml  LICENSE  README.md  codecov.yml
.github/workflows/: ci.yml  docs.yml  release.yml
crates/orator/: CHANGELOG.md  Cargo.toml
crates/orator-axum/: CHANGELOG.md  Cargo.toml
crates/orator-axum-build/: Cargo.toml
crates/orator-axum-build/src/: codegen.rs
crates/orator-axum-build/tests/: codegen_axum.rs
crates/orator-axum-build/tests/snapshots/: codegen_axum__api_builder_two_tags.snap  codegen_axum__cookie_params_disabled_by_config.snap  codegen_axum__cookie_params_extraction.snap  codegen_axum__header_params_disabled_by_config.snap  codegen_axum__header_params_extraction.snap  codegen_axum__module_build_rs_entry.snap  codegen_axum__module_handlers.snap  codegen_axum__tennis_club_axum_handlers.snap
crates/orator-axum-codegen/: CHANGELOG.md  Cargo.toml
crates/orator-axum-codegen/src/: codegen.rs
crates/orator-axum-codegen/tests/: codegen_axum.rs
crates/orator-axum-codegen/tests/snapshots/: codegen_axum__api_builder_two_tags.snap  codegen_axum__array_response_header_axum_handlers.snap  codegen_axum__cookie_params_disabled_by_config.snap  codegen_axum__cookie_params_extraction.snap  codegen_axum__default_response_axum_handlers.snap  codegen_axum__default_response_headers_axum_handlers.snap  codegen_axum__form_urlencoded_axum_handlers.snap  codegen_axum__header_params_disabled_by_config.snap  codegen_axum__header_params_extraction.snap  codegen_axum__mixed_content_types_axum_handlers.snap  codegen_axum__module_handlers.snap  codegen_axum__module_mod_file.snap  codegen_axum__module_operations.snap  codegen_axum__module_types.snap  codegen_axum__module_types.snap.new  codegen_axum__multipart_axum_handlers.snap  codegen_axum__octet_stream_axum_handlers.snap  codegen_axum__optional_body_axum_handlers.snap  codegen_axum__response_headers_axum_handlers.snap  codegen_axum__tennis_club_axum_handlers.snap  codegen_axum__text_plain_axum_handlers.snap
crates/orator-axum/src/: codegen.rs  lib.rs
crates/orator-axum/tests/: codegen_axum.rs
crates/orator-axum/tests/snapshots/: codegen_axum__api_builder_two_tags.snap  codegen_axum__cookie_params_disabled_by_config.snap  codegen_axum__cookie_params_extraction.snap  codegen_axum__header_params_disabled_by_config.snap  codegen_axum__header_params_extraction.snap  codegen_axum__module_handlers.snap  codegen_axum__module_mod_file.snap  codegen_axum__module_operations.snap  codegen_axum__module_types.snap  codegen_axum__tennis_club_axum_handlers.snap
crates/orator-core/: CHANGELOG.md  Cargo.toml
crates/orator-core/src/: codegen.rs  config.rs  error.rs  ir.rs  lib.rs  lower.rs
crates/orator-core/src/codegen/: mod.rs  operations.rs  schemas.rs
crates/orator-core/src/ir/: operations.rs  schemas.rs
crates/orator-core/src/lower/: box_cycles.rs  mod.rs  operations.rs  schemas.rs
crates/orator-core/tests/: codegen_operations.rs  codegen_types.rs  lower_operations.rs  lower_schemas.rs  lower_schemas_errors.rs
crates/orator-core/tests/snapshots/: codegen_operations__array_response_header_operations.snap  codegen_operations__default_response_headers_operations.snap  codegen_operations__default_response_operations.snap  codegen_operations__form_urlencoded_operations.snap  codegen_operations__mixed_content_types_operations.snap  codegen_operations__multipart_operations.snap  codegen_operations__octet_stream_operations.snap  codegen_operations__optional_body_operations.snap  codegen_operations__response_headers_operations.snap  codegen_operations__tennis_club_operations.snap  codegen_operations__text_plain_operations.snap  codegen_types__additional_properties.snap  codegen_types__allof_composition.snap  codegen_types__anyof.snap  codegen_types__arrays.snap  codegen_types__basic_object.snap  codegen_types__datetime.snap  codegen_types__dollar_prefix.snap  codegen_types__inline_objects.snap  codegen_types__json_value.snap  codegen_types__nullable_fields.snap  codegen_types__oneof_discriminator.snap  codegen_types__oneof_mapping.snap  codegen_types__oneof_mapping.snap.new  codegen_types__oneof_nullable.snap  codegen_types__petstore.snap  codegen_types__prefix_items.snap  codegen_types__recursive_types.snap  codegen_types__string_enum.snap  codegen_types__uuid.snap  lower_operations__array_response_header.snap  lower_operations__form_urlencoded.snap  lower_operations__mixed_content_types.snap  lower_operations__multipart.snap  lower_operations__octet_stream.snap  lower_operations__response_headers.snap  lower_operations__tennis_club_operations.snap  lower_operations__text_plain.snap  lower_schemas__additional_properties.snap  lower_schemas__allof_composition.snap  (+16 more)
crates/orator/src/: main.rs
docs/: README.md  astro.config.mjs  package-lock.json  package.json
docs/src/styles/: custom.css
examples/tennis-club/: Cargo.toml  README.md  build.rs  tennis-club.yaml
examples/tennis-club-api/: Cargo.toml
examples/tennis-club-api/src/: api.rs  lib.rs  main.rs
examples/tennis-club-api/src/api/: bookings.rs  courts.rs  health.rs  members.rs
examples/tennis-club-api/tests/: booking_roundtrip.rs
examples/tennis-club-build-rs/: Cargo.toml  build.rs
examples/tennis-club-core/: Cargo.toml  tennis-club.yaml
examples/tennis-club-generated/: Cargo.toml
examples/tennis-club/src/: api.rs  domain.rs  main.rs  tennis_club.rs
examples/tennis-club/src/api/: bookings.rs  courts.rs  members.rs
skills/orator/: SKILL.md
tests/fixtures/: default_response.yaml  form_urlencoded.yaml  mixed_content_types.yaml  multipart.yaml  octet_stream.yaml  optional_body.yaml  petstore.yaml  schemas_additional_properties.yaml  schemas_allof.yaml  schemas_anyof.yaml  schemas_arrays.yaml  schemas_basic.yaml  schemas_datetime.yaml  schemas_dollar_prefix.yaml  schemas_enum.yaml  schemas_inline_objects.yaml  schemas_json_value.yaml  schemas_nullable.yaml  schemas_oneof.yaml  schemas_oneof_mapping.yaml  schemas_oneof_nullable.yaml  schemas_prefix_items.yaml  schemas_recursive.yaml  schemas_uuid.yaml  text_plain.yaml
(+12 files in other folders)
