[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
authors = ["David Steiner <david_j_steiner@yahoo.co.nz>"]
version = "0.0.1"
edition = "2024"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/davidsteiner/orator"
repository = "https://github.com/davidsteiner/orator"
keywords = ["openapi", "api", "web", "axum"]
categories = ["web-programming", "web-programming::http-server"]

[workspace.dependencies]
oas3 = { version = "0.20", features = ["yaml-spec"] }
thiserror = "2"
insta = "1"

orator-core = { path = "crates/orator-core" }
orator-axum = { path = "crates/orator-axum" }
