[workspace]
members = [
    "crates/*",
    "examples/*"
]
resolver = "3"

[workspace.package]
authors = ["David Steiner <david_j_steiner@yahoo.co.nz>"]
version = "0.0.1"
edition = "2024"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/davidsteiner/orator"
repository = "https://github.com/davidsteiner/orator"
keywords = ["openapi", "api", "web", "axum"]
categories = ["web-programming", "web-programming::http-server"]

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
heck = "0.5"
insta = "1"
oas3 = { version = "0.20", features = ["yaml-spec"] }
prettyplease = "0.2"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
thiserror = "2"

orator-core = { path = "crates/orator-core" }
orator-axum = { path = "crates/orator-axum" }
orator-axum-codegen = { path = "crates/orator-axum-codegen" }
