[package]
name = "orator-axum-build"
description = "Axum build-time codegen for orator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
orator-core = { version = "0.0.1", path = "../orator-core" }

oas3.workspace = true
prettyplease.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
insta.workspace = true
