[package]
name = "orator-axum-codegen"
description = "Axum code generation for orator"
version = "0.1.3"
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
orator-core = { version = "0.1.3", path = "../orator-core" }

prettyplease.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
insta.workspace = true
oas3.workspace = true
