[package]
name = "orator-axum"
description = "Axum runtime support for orator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
axum = "0.8"
bytes = "1"
http = "1"
tower = "0.5"

[features]
default = []
cookies = ["dep:axum-extra"]

[dependencies.axum-extra]
version = "0.12"
features = ["cookie"]
optional = true
