[package]
name = "orator-axum"
description = "Axum runtime support for orator"
version = "0.2.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
bytes = "1"
http = "1"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
tower = "0.5"

[features]
default = []

[dependencies.axum-extra]
version = "0.12"
features = ["cookie"]

[dev-dependencies]
http-body-util = "0.1"
tokio = { version = "1", features = ["macros"] }
