[package]
name = "orator-core"
description = "Server stub generation from OpenAPI 3.1 specs"
version = "0.1.3"
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
heck.workspace = true
oas3.workspace = true
prettyplease.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
thiserror.workspace = true

[dev-dependencies]
insta.workspace = true
