[package]
name = "orator"
description = "Server stub generation from OpenAPI 3.1 specs"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
clap = { workspace = true }
oas3 = { workspace = true }

orator-axum-codegen = { version = "0.1.0", path = "../orator-axum-codegen" }
orator-core = { version = "0.1.0", path = "../orator-core" }
