[package]
name = "orator"
description = "Server stub generation from OpenAPI 3.1 specs"
version = "0.1.13"
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
clap = { workspace = true }
oas3 = { workspace = true }

orator-axum-codegen = { version = "0.2.6", path = "../orator-axum-codegen" }
orator-core = { version = "0.9.0", path = "../orator-core" }
