[package]
name = "tennis-club-api"
version = "0.0.1"
edition = "2024"
publish = false

[dependencies]
tennis-club-core = { path = "../tennis-club-core" }
orator-axum = { path = "../../crates/orator-axum" }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scalar_api_reference = { version = "0.2", features = ["axum"] }
tokio = { version = "1", features = ["full"] }
