[package]
name = "tennis-club"
version = "0.0.1"
edition = "2024"

[dependencies]
axum = "0.8"
http = "1"
serde = { version = "1", features = ["derive"] }
scalar_api_reference = { version = "0.1", features = ["axum"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
orator-core = { path = "../../crates/orator-core" }
orator-axum = { path = "../../crates/orator-axum" }
oas3 = { version = "0.20", features = ["yaml-spec"] }
