[package]
name = "tennis-club"
version = "0.0.1"
edition = "2024"

[dependencies]
axum = "0.8"
axum-extra = { version = "0.12", features = ["cookie"] }
tower = "0.5"
http = "1"
serde = { version = "1", features = ["derive"] }
scalar_api_reference = { version = "0.2", features = ["axum"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
orator-axum = { path = "../../crates/orator-axum" }
